--- a/FacturacionCSR/src/main/resources/application.properties
+++ b/FacturacionCSR/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=FacturacionCSR
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/Facturacion
 spring.datasource.username=root
-spring.datasource.password=Root
+spring.datasource.password=root
 # Para mantener los nombres tal como están definidos en las anotaciones @Column sin convertirlos a snake_case
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
