--- a/FacturacionCSR/pom.xml
+++ b/FacturacionCSR/pom.xml
@@ -65,6 +65,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itext7-core</artifactId>
+			<version>7.1.0</version>
+			<type>pom</type>
+		</dependency>
 	</dependencies>
 
 	<build>
